--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ h1.z{
     margin-right: 100px;
     color: black;
     font-family: 'Courier New', Courier, monospace;
-    text-size: 15px;
+    font-size: 25px;
 }
 a.y{
     position: absolute;
