--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ a.pp{
 h1.z{
     position: absolute;
     bottom: 0;
-    margin-right: 100px;
+    right: 0;
     color: black;
     font-family: 'Courier New', Courier, monospace;
     font-size: 17px;
