--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ a.pp{
 h1.z{
     position: absolute;
     bottom: 0;
-    right: 0;
+     margin-right: 100px;
     color: black;
     font-family: 'Courier New', Courier, monospace;
     font-size: 17px;
@@ -53,7 +53,7 @@ a.y{
     position: absolute;
         bottom: 0;
         width: 100%;
-        margin-left: 85%;
+        right: 0;
     color: black;
     font-size: 8px;
 }
