--- a/index.css
+++ b/index.css
@@ -50,11 +50,9 @@ h1.z{
     font-size: 17px;
 }
 a.y{
-    position: absolute;
-        bottom: 0;
-        width: 100%;
-        right: 0;
-    float: right;
+    position: fixed;
+    top: 87.5%;
+    z-index: 1;
     color: black;
     font-size: 8px;
 }
